# ARCE

./: .gitignore  .~lock.TODO.odt#  ARCE_config.json  Bot.cpp  Bot.h  CMakeLists.txt  Command.cpp  Command.h  DFA.dot  Makefile  Parser.cpp  Parser.h  README.md  TODO.odt  callscript.cpp  cmake_install.cmake  commands.json  customCommands.json  index.md  main.cpp  testInput.txt
.config/: addnote.json  adduser.json  ball.json  botDFA.json  command_Add User.json  command_Ball.json  command_Exit.json  command_Log.json  command_Note.json  command_Remove User.json  command_Roll.json  command_Template.json  exit.json  log.json  note.json  removeuser.json  rmuser.json  roll.json  rolt.json  template.json
FA/: CMakeLists.txt  DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  FA.cpp  FA.h  State.cpp  State.h  eNFA.cpp  eNFA.h
Levenshtein/: Levenshtein.cpp  Levenshtein.h
MSSC/: CMakeLists.txt  Fase1.cpp  MSSC.cpp  MSSC.h  mssc.cpp
Scripts/: Template.py  addNote.py  ball.py  calendar_script.py  roll.py
TFA/: CMakeLists.txt  tfa.cpp  tfa.h
bot/: credentials.txt  fb_bot.py
bot/fbchat/: client.py
bot/log/: 2017-06-05  2017-06-05.txt
config/: ball.json  botDFA.json  command_Log.json  command_Remove User.json  exit.json  log.json  rmuser.json  roll.json
enfa_to_dfa/: Fase1.cpp
link/: link.txt  linkToPython.txt
log/: 2017-06-06  2017-06-06.txt
regex_to_enfa/: CMakeLists.txt  regex_to_enfa.cpp  regex_to_enfa.h
scripts/: addCalendar.py  addNote.py  ball.py  roll.py
src/: main.cpp
src/algos/: CMakeLists.txt  Levenshtein.cpp  Levenshtein.h  MSSC.cpp  MSSC.h  Makefile  tfa.cpp  (+4 more)
(+18 files in other folders)
